--- a/themes/light/css/beto.css
+++ b/themes/light/css/beto.css
@@ -1,30 +1,12 @@
 body {
-    margin: 0;
-    /*background-image: url('/themes/light/img/carlaybeto/background2_1.png') !important;*/
-    background-color: transparent !important;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: auto 150vh;
-    text-align: center;
     font-family: 'Quicksand', sans-serif !important;
     font-size: 24px;
-    overflow-x: hidden !important;
-    text-rendering: optimizeLegibility !important;
-    -webkit-font-smoothing: antialiased !important;
-   /* max-width: 100vh !important;*/
-
 }
-
-.seccion {
-    display: block;
-    margin: auto;
-    text-align: center;
-    font-family: 'Quicksand', sans-serif !important;
-    margin-top: 75px;
-    font-size: 28px;
-    overflow: hidden;
-}
+/*
+background-color: #C7B38A;
+background-color: #FFE8B2;
+background-color: #8B7D62;
+*/
 
 .imagen_separadora {
     background-color: rgba(255, 255, 255, 0.41);
@@ -91,6 +73,7 @@ body {
     font-family: 'Rubik', sans-serif !important;
 }
 
+/* todo; más codigo en common.css */
 .btn-como-llegar {
     background: none !important;
     border-color: #8B7D62 !important;
@@ -102,11 +85,6 @@ body {
     font-weight: 500 !important;
 }
 
-/*
-background-color: #C7B38A;
-background-color: #FFE8B2;
-background-color: #8B7D62;
-*/
 .btn-como-llegar:hover {
     /*color: #ffffff !important;*/
     color: #000000 !important;
@@ -114,19 +92,10 @@ background-color: #8B7D62;
     border-color: #C7B38A !important;
     box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2) !important;
     -webkit-transition: all 0.3s ease-in-out !important;
-    ;
     -moz-transition: all 0.3s ease-in-out !important;
-    ;
     transition: all 0.3s ease-in-out !important;
 }
 
-.fas,
-.far {
-    margin-right: 10px;
-    padding: 10px;
-    font-size: 25px;
-
-}
 
 .wrap_dress_code {
     display: flex;
@@ -140,10 +109,6 @@ background-color: #8B7D62;
 
 .wrap_testigos_padrinos {
     background-color: rgba(255, 255, 255, 0.41);
-    /*background-color: rgb(248, 248, 250);
-    background-color: #C7B38A;
-    background-color: #FFE8B2;
-    background-color: #8B7D62;*/
     padding: 40px 15%;
 }
 
@@ -152,13 +117,11 @@ background-color: #8B7D62;
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
+/* todo en common */
+.marco_div_foto_padrinx{
+}
+/* todo en common */
 .div_foto_padrinx {
-    border-radius: 100%;
-    width: 220px;
-    overflow: hidden;
-    height: 220px;
-    margin: auto;
 }
 
 .div_foto_padrinx img {
@@ -166,32 +129,18 @@ background-color: #8B7D62;
     left: -58px;
     top: -1%;
 }
-
-.seccion_background_gray {
-    padding-top: 90px;
-    padding-bottom: 90px;
-    background-color: #efefef;
+.seccion{
+    font-family: 'Questrial', sans-serif !important;
 }
 
-.wrap_card {
-    width: 50%;
-    margin: auto;
-    /*padding: 40px;*/
-    line-height: 0px;
-}
 
-.wrap_card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 .item_regalo{
     font-size: 26px;
 }
 .wrap_regalo{
     display: block;
     font-size: 26px;
-}
-.wrap_regalo:focus, .wrap_regalo:active,  .wrap_regalo:hover{
-    text-decoration: none;
 }
 
 .texto_padrinos {
