--- a/themes/light/css/common.css
+++ b/themes/light/css/common.css
@@ -1,13 +1,90 @@
-.wrap_contenido_pagina{
-    min-height: calc(100vh - 60px);
+body {
+  margin: 0;
+  background-color: transparent !important;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: auto 150vh;
+  font-display: auto;
+  text-align: center;
+  overflow-x: hidden !important;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+.wrap_contenido_pagina {
+  min-height: calc(100vh - 60px);
 }
 
-a:hover, a:focus, a:active {
-    color: inherit !important;
-    text-decoration: none !important;
+a:hover,
+a:focus,
+a:active,
+.wrap_regalo:focus,
+.wrap_regalo:active,
+.wrap_regalo:hover {
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
-.footer .container{
-    display: flex;
-    justify-content: space-around;
+.footer .container {
+  display: flex;
+  justify-content: space-around;
+}
+/* ANIMACIONES */
+
+.btn-como-llegar {
+  transition: 700ms;
+}
+.div_foto_padrinx img {
+  /*transform: scale(0.95);*/
+  opacity: 0.9;
+  /*transition: transform 400ms ease-in;*/
+  transition: opacity 400ms ease-in;
+}
+.marco_div_foto_padrinx {
+  background-color: #c7b38a;
+  width: 250px;
+  height: 230px;
+  overflow: hidden;
+  position: absolute;
+  margin: auto;
+  -webkit-clip-path: polygon(75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%, 25% 0);
+  clip-path: polygon(75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%, 25% 0);
+}
+.div_foto_padrinx img:hover {
+  opacity: 1;
+  /*transform: scale(1.05);*/
+  margin-left: 8px;
+  margin-top: 8px;
+  width: 235px;
+  height: 215px;
+  -webkit-clip-path: polygon(75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%, 25% 0);
+  clip-path: polygon(75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%, 25% 0);
+}
+
+.seccion {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-top: 75px;
+  font-size: 28px;
+  /*overflow: hidden;*/
+}
+/* wrap de todo el bloque de padrinos y testigos*/
+.wrap_testigos_padrinos {
+  background-color: rgba(255, 255, 255, 0.41);
+  padding: 40px 15%;
+}
+
+/*todo; iconos de los botones de como llegar*/
+.fas,
+.far {
+  margin-right: 10px;
+  padding: 10px;
+  font-size: 25px;
+}
+
+.seccion_background_gray {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef99;
 }
