--- a/themes/light/css/walteryvaleria.css
+++ b/themes/light/css/walteryvaleria.css
@@ -343,14 +343,14 @@ body {
     font-size: 30px !important;
   }
   .btn-como-llegar {
-    max-width: 315px !important;
+    max-width: 70% !important;
     display: flex !important;
     align-items: baseline !important;
     justify-content: space-evenly !important;
     margin: auto !important;
   }
   .footer {
-    font-size: 14px !important;
+    font-size: 18px !important;
     color: white !important;
     height: 50px;
   }
