--- a/themes/light/css/common.css
+++ b/themes/light/css/common.css
@@ -69,7 +69,7 @@ a:active,
   text-align: center;
   margin-top: 75px;
   font-size: 28px;
-  overflow-x: hidden !important;
+  /*overflow-x: hidden !important;*/
 }
 /* wrap de todo el bloque de padrinos y testigos*/
 .wrap_testigos_padrinos {
