--- a/themes/light/css/common.css
+++ b/themes/light/css/common.css
@@ -29,8 +29,12 @@ a:active,
 .footer .container {
   display: flex;
   justify-content: space-around;
+  padding-right: 0px !important;
+  padding-left: 0px !important;
 }
-
+.container p:last-child {
+  margin-left: 2vw;
+}
 /* ANIMACIONES */
 
 .btn-como-llegar {
